[gd_scene load_steps=4 format=2]

[ext_resource path="res://gradient1.png" type="Texture" id=1]
[ext_resource path="res://ShipDiagramHardpoint.gd" type="Script" id=2]
[ext_resource path="res://artillery-shell.png" type="Texture" id=3]

[node name="ShipDiagramHardpoint" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1205.0
margin_bottom = -725.0
rect_min_size = Vector2( 75, 75 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ReloadBar" type="TextureProgress" parent="."]
anchor_left = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
value = 67.0
texture_progress = ExtResource( 1 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_ShipDiagramHardpoint_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ShipDiagramHardpoint_mouse_exited"]
